feat: add deployment config and rewrite docs in English
- Add Dockerfile for Spring Boot backend (multi-stage build)
- Add render.yaml for Render.com infrastructure blueprint
- Add vercel.json for Vercel frontend deployment
- Add DEPLOYMENT.md with step-by-step free hosting guide
- Make API base URL configurable via VITE_API_URL env var
- Make CORS origins configurable via CORS_ORIGINS env var
- Rewrite project-desc.md from Bulgarian to English
- Rewrite user-stories.md from Bulgarian to English